# data-pipeline

./: .gitignore  README.md  db_utils.py  main.py  output.md  pyproject.toml
data_pipeline/: config.py
data_pipeline/analyze/: analyzer.py  llm_logger.py
data_pipeline/cleaning/: cleaner.py
data_pipeline/ingest/: loader.py
data_pipeline/profiling/: profiler.py
data_pipeline/visualize/: visualizer.py
notebooks/: analysis_summary.md  data_pipeline_analysis.ipynb
